temp commit detector trigger detection types Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>